<resources>
    <string name="app_name">SlotenService</string>


    <!--Specific names-->
    <string name="company">Sloten Service Wassenaar</string>
    <string name="welcome_word">Goeie dag!</string>

    <!--    Basic names-->
    <string name="delete">Verwijder</string>
    <string name="add">Toevoegen</string>
    <string name="edit">Aanpassen</string>
    <string name="return_to">Terug</string>


    <!--    Calendar Screen-->
    <string name="calender_screen"> Calender</string>

    <!--    Appointment-->
    <string name="appointment">Afspraak</string>
    <string name="paid_button">betaalt</string>
    <string name="complete_button">uitgevoerd</string>
    <string name="phone_icon">✆</string>
    <string name="euro_icon">€</string>

    <!--If appointments are paid and completed-->
    <string name="appointment_is_paid">De uitvoering is betaalt</string>
    <string name="appointment_is_not_paid">De uitvoering is niet betaalt</string>

    <string name="appointment_is_completed">De uitvoering is afgerond</string>
    <string name="appointment_is_not_completed">De uitvoering is niet afgerond</string>


    <!--Placeholders-->
    <string name="placeholder_name">KlantNaam</string>
    <string name="placeholder_time">00:00</string>

    <string name="placeholder_date">07–12</string>
    <string name="placeholder_paid">De uitvoering is betaalt</string>
    <string name="placeholder_completed">De uitvoering is niet afgerond</string>
    <string name="placeholder_phone">06–1234567890</string>
    <string name="placeholder_price">€5,45</string>
    <string name="placeholder_service">Dienst</string>
    <string name="placeholder_null"> </string>

    <!--Hints -->
    <string name="hint_date">dd–mm </string>
    <string name="hint_time">00:00</string>
    <string name="hint_phone">06–1234567890</string>
    <string name="hint_price">0,00</string>

    <!--    Archive Screen-->
    <string name="archive">Archief</string>

    <!--    Create Appointment Screen-->
    <string name="create_appointment">Afspraak maken</string>
    <string name="client_name">Klanten naam</string>

    <string name="client_phone">Telefoon van klant</string>
    <string name="appointment_time">Tijd van afspraak</string>
    <string name="appointment_date">Datum van afspraak</string>
    <string name="appointment_price">Prijs van de afspraak</string>
    <string name="appointment_service">Dienst</string>

    <!-- Diensten lijst  -->
    <string name="service_slot">Sloten instaleren</string>
    <string name="service_door">Deur in huis zetten</string>
    <string name="service_open">Openen van slot</string>
    <string name="service_advise">Adviseren van klant</string>


    <!--    Database Connection-->
    <string name="failed_connection_title">Oeps!</string>
    <string name="failed_connection_body">Excuses voor het ongemak</string>

    <string name="success_connection_title">Afspraak toegevoegd</string>
    <string name="success_connection_body">De afspraak is toegevoegd aan uw calender.</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>