<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAppointmentActivity">

  <Button
      android:id="@+id/add_appointment"
      android:layout_width="163dp"
      android:layout_height="44dp"
      android:layout_marginEnd="36dp"
      android:layout_marginBottom="52dp"
      android:background="@color/prim_light"
      android:backgroundTint="@color/prim_light"
      android:text="@string/add"
      android:textSize="@dimen/h3"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <Button
      android:id="@+id/returnMainButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/return_to"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/appointment_edit_price"
      android:layout_width="167dp"
      android:layout_height="44dp"
      android:layout_marginStart="31dp"
      android:layout_marginTop="4dp"
      android:ems="10"
      android:inputType="numberDecimal"
      app:layout_constraintStart_toEndOf="@+id/appointment_service_Spinner"
      app:layout_constraintTop_toBottomOf="@+id/appointment_price" />

  <Spinner
      android:id="@+id/appointment_service_Spinner"
      android:layout_width="149dp"
      android:layout_height="48dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="31dp"
      app:layout_constraintEnd_toStartOf="@+id/appointment_edit_price"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/appointment_service" />

  <TextView
      android:id="@+id/appointment_service"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="28dp"
      android:text="@string/appointment_service"
      android:textSize="@dimen/h3"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/client_edit_phone" />

  <TextView
      android:id="@+id/appointment_time"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="37dp"
      android:layout_marginEnd="81dp"
      android:text="@string/appointment_time"
      android:textSize="@dimen/h3"
      app:layout_constraintEnd_toStartOf="@+id/appointment_date"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/appointment_service_Spinner" />

  <TextView
      android:id="@+id/appointment_date"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="56dp"
      android:text="@string/appointment_date"
      android:textSize="@dimen/h3"
      app:layout_constraintStart_toEndOf="@+id/appointment_time"
      tools:layout_editor_absoluteY="387dp" />

  <EditText
      android:id="@+id/appointment_edit_time"
      android:layout_width="142dp"
      android:layout_height="54dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="82dp"
      android:ems="10"
      android:inputType="time"
      app:layout_constraintEnd_toStartOf="@+id/appointment_edit_date"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/appointment_time" />

  <EditText
      android:id="@+id/appointment_edit_date"
      android:layout_width="165dp"
      android:layout_height="51dp"
      android:layout_marginStart="36dp"
      android:layout_marginTop="12dp"
      android:ems="10"
      android:inputType="date"
      app:layout_constraintStart_toEndOf="@+id/appointment_edit_time"
      app:layout_constraintTop_toBottomOf="@+id/appointment_date" />

  <TextView
      android:id="@+id/appointment_price"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="212dp"
      android:layout_marginTop="32dp"
      android:text="@string/appointment_price"
      android:textSize="@dimen/h3"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/client_edit_phone" />

  <EditText
      android:id="@+id/client_edit_name"
      android:layout_width="297dp"
      android:layout_height="29dp"
      android:layout_marginStart="32dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintStart_toStartOf="parent"
      tools:layout_editor_absoluteY="133dp" />

  <TextView
      android:id="@+id/name_client"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="32dp"
      android:text="@string/client_name"
      android:textSize="@dimen/h3"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/returnMainButton" />

  <EditText
      android:id="@+id/client_edit_phone"
      android:layout_width="342dp"
      android:layout_height="28dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="phone"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/client_phone" />

  <TextView
      android:id="@+id/client_phone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="68dp"
      android:text="@string/client_phone"
      android:textSize="@dimen/h3"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/name_client" />

</androidx.constraintlayout.widget.ConstraintLayout>